--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Prakash Portfolio</title>
 </head>
 <body>
+    <html style="background:yellow"></html>
     <h1>Prakash Mani's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr size="3" noshade/>
