--- a/public/about.html
+++ b/public/about.html
@@ -1,3 +1,4 @@
+<html style="background:yellow;"></html>
 <P>About Me</P>
 <p>Me Prakash Mani is currently carving out my path in the world of technology<br>
    as I am pursuing a Bachelor's degree in Technology from JUET Guna.<br> 
