--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,4 +1,5 @@
 <!-- Write your code below -->
+<html style="background:yellow;"></html>
 <h1>The Best Movies According To Prakash</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr>
