--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -6,6 +6,7 @@
 <!-- Example Google Maps Link 
 https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656
 -->
+<html style="background:yellow;"></html>
 <h1>It's PRAMIT SARKAR Birthday!</h1>
 <h2>On the 26th NOV</h2>
 <img src="https://images.pexels.com/photos/14454566/pexels-photo-14454566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200px" height="=150px" alt="It's a pink cake"/>
